# fty-cmake-example

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/public_includes/hello/: hello.h
lib/src/: hello.cpp  private.cpp  private.h
lib/tests/: test.cpp
server/: CMakeLists.txt
server/src/: hello_server.cpp
